# pfw

./: CMakeLists.txt  pfwConfig.cmake.in
examples/dummy/: dummy.cpp
examples/implementation/: implementation.cpp
include/: hooking.h  old.h  pefile.h  pfw.h  pfwlib.h  stringutils.h  typetraits.h  windows_extensions.h
include/detail/: hooking.h  pefile.h  stringutils.h  windows_extensions.h  winternal.h
src/: hooking.cpp  pefile.cpp  pfwlib.cpp  stringutils.cpp
